# pythrottle

./: README.md  pyproject.toml  throttle.py
pythrottle/: __init__.py  throttle.py
tests/: conftest.py  test_throttle.py
